resolve sonarlint findings (#105)
Solves #105